--- a/trip/templates/trip/pages/create_category.html
+++ b/trip/templates/trip/pages/create_category.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cida Tour - Create Category</title>
+    <title>Cida Tour | Registo de Categoria</title>
 </head>
 <body>
-    <h1>Create category</h1>
+    <h2>Nova Categoria</h2>
     <div>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Create Category</button>
+            <button type="submit">Salvar</button>
         </form>
     </div>
 </body>
